--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,6 +3,6 @@
     <p>Name: <input type="text" id="name" name="name"></p>
     <p>Email: <input type="text" id="email" name="email"></p>
     <p>Password: <input type="password" id="password" name="password"></p>
-    <input type="submit" value="submit">
+    <input type="submit" value="Sign Up">
 </form>
 
